Fix player GUIs overlapping videos.

--- a/src/styles/ports/ha/partials/_canvases.scss
+++ b/src/styles/ports/ha/partials/_canvases.scss
@@ -1,5 +1,6 @@
 .HAP-canvas {
   background: $mono-Blk;
+  padding-bottom: $player-height;
 }
 .HAP-canvas--source {
   &:after {
